# user_management

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 54036b235965_добавлено_поле_full_name_в_таблицу_.py  6d8a1dfad8a1_создание_таблицы_user.py  6f2524e03164_initial_migration.py  e9cbd75bd5e5_fix_registered_at_timestamp.py  eb7d0fbc233d_create_users_and_roles_tables.py
tests/: conftest.py  test_weather.py
user_management/: .env  config.py  create_models.py  dependencies.py  main.py  routers.py  users.py  weather.py
user_management/auth/: auth.py  auth_routes.py  database.py  manager.py  schemas.py  security.py
user_management/models/: __init__.py  role.py  user.py  weather.py
user_management/schemas/: weather.py
